# code-tlap

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/tlap-1/: main.cpp
src/tlap-2-decode/: CMakeLists.txt  main.cpp
src/tlap-2-lunh/: main.cpp
src/tlap-2-problems/: CMakeLists.txt  isbn-13.cpp  isbn-13.h  main.cpp
src/tlap-3-arrays/: CMakeLists.txt  main.cpp
src/tlap-3-benchsort/: main.cpp
src/tlap-3-insertion/: main.cpp
src/tlap-3-mergesort/: main.cpp
src/tlap-3-problems/: CMakeLists.txt  main.cpp
src/tlap-3-quicksort/: main.cpp
src/tlap-6-problems/: CMakeLists.txt  main.cpp
src/tlap-lib/: CMakeLists.txt  tlap-lib.cpp  tlap-lib.h
src/tlap-misc/: main.cpp
tlap-template/: CMakeLists.txt  main.cpp
