add_subdirectory(tlap-lib)

add_subdirectory(tlap-1)
add_subdirectory(tlap-2-lunh)
add_subdirectory(tlap-2-decode)
add_subdirectory(tlap-2-problems)
add_subdirectory(tlap-3-benchsort)
add_subdirectory(tlap-3-insertion)
add_subdirectory(tlap-3-arrays)
add_subdirectory(tlap-3-quicksort)
add_subdirectory(tlap-3-mergesort)
